--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
     "build": "nuxt build",
     "start": "node .output/server/index.mjs"
   },
+  "dependencies": {
+    "@notionhq/client": "^0.3.1",
+    "axios": "^0.22.0",
+    "core-js": "^3.15.1",
+    "element-plus": "^1.1.0-beta.20"
+  },
   "devDependencies": {
-    "nuxt3": "latest"
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "nuxt3": "latest",
+    "prettier": "^2.3.2"
   }
 }
