--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 # example netlify.toml
 [build]
-  command = "nuxt generate"
+  command = "nuxt build"
   functions = "netlify/functions"
-  publish = "dist"
+  publish = ".output/server"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
@@ -13,9 +13,10 @@
 
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
+
 [dev]
  command = "yarn run dev" # Command to start your dev server
  port = 3001 # Port that the dev server will be listening on
- publish = "dist" # Folder with the static content for _redirect file
+ publish = ".nuxt" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
