--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 [build]
   command = "nuxt build"
   functions = "netlify/functions"
-  publish = ".output/server"
+  publish = "dist"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
