--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
     "build": "nuxt build",
-    "start": "node .output/server/index.mjs"
-  },
-  "dependencies": {
-    "@notionhq/client": "^0.3.1",
-    "axios": "^0.22.0",
-    "core-js": "^3.15.1",
-    "element-plus": "^1.1.0-beta.20"
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "nuxt3": "latest",
-    "prettier": "^2.3.2"
+    "@nuxtjs/tailwindcss": "^5.3.5",
+    "nuxt": "3.0.0-rc.11"
+  },
+  "dependencies": {
+    "@notionhq/client": "^2.2.1",
+    "axios": "^1.1.2"
   }
 }
