--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
   // https://v3.nuxtjs.org/concepts/typescript
-  "extends": "./src/.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json"
 }
