--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "@notionhq/client": "^2.2.1",
     "@pinia/nuxt": "^0.4.3",
-    "pinia": "^2.0.23",
     "axios": "^1.1.2",
-    "netlify-identity-widget": "^1.9.2"
+    "date-fns": "^2.29.3",
+    "netlify-identity-widget": "^1.9.2",
+    "pinia": "^2.0.23"
   }
 }
