--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "private": true,
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "eslint:lint": "eslint ./src --ext .ts,.vue",
+    "eslint:lint-fix": "eslint ./src --ext .ts,.vue --fix",
+    "prettier:format-check": "npx prettier --check ./src",
+    "prettier:format-write": "npx prettier --write ./src",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@nuxtjs/tailwindcss": "^5.3.5",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@types/netlify-identity-widget": "^1.9.3",
-    "nuxt": "3.0.0-rc.11"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "nuxt": "3.0.0-rc.11",
+    "prettier": "^2.7.1",
+    "eslint": "^8.26.0"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.1",
